RESOLVED FIXED192037
imported/w3c/web-platform-tests/webrtc/RTCPeerConnection-transceivers.https.html is flaky on iOS simulator
https://bugs.webkit.org/show_bug.cgi?id=192037
Summary imported/w3c/web-platform-tests/webrtc/RTCPeerConnection-transceivers.https.h...
youenn fablet
Reported 2018-11-27 14:15:43 PST
Test is flaky on the bots: ASSERTION FAILED: report->backingMap() /Volumes/Data/slave/ios-simulator-12-debug/build/Source/WebCore/Modules/mediastream/libwebrtc/LibWebRTCStatsCollector.cpp(391) : auto WebCore::LibWebRTCStatsCollector::OnStatsDelivered(const rtc::scoped_refptr<const webrtc::RTCStatsReport> &)::(anonymous class)::operator()() const 1 0x333293f59 WTFCrash 2 0x337128d6b WTFCrashWithInfo(int, char const*, char const*, int) 3 0x3373495c6 WebCore::LibWebRTCStatsCollector::OnStatsDelivered(rtc::scoped_refptr<webrtc::RTCStatsReport const> const&)::$_1::operator()() const 4 0x337349419 WTF::Function<void ()>::CallableWrapper<WebCore::LibWebRTCStatsCollector::OnStatsDelivered(rtc::scoped_refptr<webrtc::RTCStatsReport const> const&)::$_1>::call() 5 0x3332bb7fd WTF::Function<void ()>::operator()() const 6 0x3332e92ad WTF::dispatchFunctionsFromMainThread() 7 0x3332ec035 -[JSWTFMainThreadCaller call] 8 0x103e4dc7b __NSThreadPerformPerform 9 0x32d5a6721 __CFRUNLOOP_IS_CALLING_OUT_TO_A_SOURCE0_PERFORM_FUNCTION__ 10 0x32d5a5f93 __CFRunLoopDoSources0 11 0x32d5a063f __CFRunLoopRun 12 0x32d59fe11 CFRunLoopRunSpecific 13 0x103e38322 -[NSRunLoop(NSRunLoop) runMode:beforeDate:] 14 0x103e38492 -[NSRunLoop(NSRunLoop) run] 15 0x32f1da812 _xpc_objc_main 16 0x32f1dccbd xpc_main 17 0x103d7bbc7 WebKit::XPCServiceMain(int, char const**) 18 0x103d7bf22 main 19 0x32ef0f575 start LEAK: 1 WebPageProxy
Attachments
Patch (5.15 KB, patch)
2018-11-27 14:30 PST, youenn fablet
no flags
Patch (5.15 KB, patch)
2018-11-28 09:11 PST, youenn fablet
no flags
youenn fablet
Comment 1 2018-11-27 14:30:22 PST
youenn fablet
Comment 2 2018-11-28 09:09:45 PST
*** Bug 192036 has been marked as a duplicate of this bug. ***
youenn fablet
Comment 3 2018-11-28 09:11:34 PST
WebKit Commit Bot
Comment 4 2018-11-28 14:12:42 PST
Comment on attachment 355878 [details] Patch Clearing flags on attachment: 355878 Committed r238642: <https://trac.webkit.org/changeset/238642>
WebKit Commit Bot
Comment 5 2018-11-28 14:12:44 PST
All reviewed patches have been landed. Closing bug.
Radar WebKit Bug Importer
Comment 6 2018-11-28 14:14:00 PST
Note You need to log in before you can comment on or make changes to this bug.