Source/WebCore/Modules/mediastream/libwebrtc/LibWebRTCStatsCollector.h
@@ -42,7 +42,7 @@ class RTCStatsReport;
 
 class LibWebRTCStatsCollector : public webrtc::RTCStatsCollectorCallback {
 public:
-    using CollectorCallback = WTF::CompletionHandler<bool(RefPtr<RTCStatsReport>&&)>;
+    using CollectorCallback = CompletionHandler<RefPtr<RTCStatsReport>()>;
     static rtc::scoped_refptr<LibWebRTCStatsCollector> create(CollectorCallback&& callback) { return new rtc::RefCountedObject<LibWebRTCStatsCollector>(WTFMove(callback)); }
 
     explicit LibWebRTCStatsCollector(CollectorCallback&&);
